--- a/.env
+++ b/.env
@@ -9,6 +9,6 @@ DB_CONNECTION=mysql
 DB_HOST=mysql642.umbler.com
 DB_PORT=41890
 DB_USER=mateusbastos
-DB_PASSWORD=Mateus1807
+DB_PASSWORD=
 DB_DATABASE=wp_mateus
 HASH_DRIVER=bcrypt
